fixes issues with label preview overflow, text alignment options and floats options

--- a/helpers.css
+++ b/helpers.css
@@ -231,6 +231,10 @@
   text-align: right;
 }
 
+.text-align-left {
+  text-align: left;
+}
+
 .text-align-justify {
   text-align: justify;
 }
